SergioRibera.plugin-system-poc.61c06e7236972b999d840a4c191cd2f91d50d8fb
   Compiling proc-macro2 v1.0.103
   Compiling libc v0.2.178
   Compiling quote v1.0.42
   Compiling unicode-ident v1.0.22
   Compiling zerocopy v0.8.31
   Compiling cfg-if v1.0.4
   Compiling equivalent v1.0.2
   Compiling winnow v0.7.14
   Compiling hashbrown v0.16.1
   Compiling toml_datetime v0.7.3
   Compiling syn v1.0.109
   Compiling semver v1.0.27
   Compiling rustversion v1.0.22
   Compiling stabby-macros v72.1.1
   Compiling rustc_version v0.4.1
   Compiling stabby v72.1.1
    Checking sha2-const-stable v0.1.0
    Checking libloading v0.8.9
   Compiling stabby-abi v72.1.1
   Compiling syn v2.0.111
   Compiling indexmap v2.12.1
   Compiling getrandom v0.2.16
   Compiling rand_core v0.6.4
   Compiling ppv-lite86 v0.2.21
   Compiling rand_chacha v0.3.1
   Compiling rand v0.8.5
   Compiling toml_parser v1.0.4
   Compiling toml_edit v0.23.9
   Compiling proc-macro-crate v3.4.0
   Compiling plugin_gen v0.1.0 (/tmp/nix-shell.09CNMZ/SergioRibera_plugin-system-poc_qx9qo_29/crates/macros)
error[E0658]: use of unstable library feature `freeze`
  --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/stabby-abi-72.1.1/src/vtable/mod.rs:21:54
   |
21 | pub trait IConstConstructor<'a, Source>: 'a + Copy + core::marker::Freeze {
   |                                                      ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #121675 <https://github.com/rust-lang/rust/issues/121675> for more information
   = help: add `#![feature(freeze)]` to the crate attributes to enable

For more information about this error, try `rustc --explain E0658`.
error: could not compile `stabby-abi` (lib) due to 1 previous error
